devel
-----

* increase default maximum number of V8 contexts to at least 16 if not 
  explicitly configured otherwise. the mode for determining the actual maximum
  value of V8 contexts is unchanged and works as follows:
  - if explicitly set, the value of the configuration option `--javascript.v8-contexts`
    is used as the maximum number of V8 contexts
  - when the option is not set, the maximum number of V8 contexts is determined
    by the configuration option `--server.threads` if that option is set. if 
    `--server.threads` is not set, then the maximum number of V8 contexts is the
    server's reported hardware concurrency (number of processors visible
    to the arangod process). if that would result in a maximum value of 16 in 
    any of these two cases, then the maximum value will be increased to 16.

* fixed issue #3447: ArangoError 1202: AQL: NotFound: (while executing) when 
  updating collection

* potential fix for issue #3581: Unexpected "rocksdb unique constraint 
  violated" with unique hash index

* fix agency precondition check for complex objects

* introduce `enforceReplicationFactor`: An optional parameter controlling
  if the server should bail out during collection creation if there are not
  enough DBServers available for the desired `replicationFactor`.

* fixed issue #3516: Show execution time in arangosh
    
  this change adds more dynamic prompt components for arangosh
  The following components are now available for dynamic prompts, 
  settable via the `--console.prompt` option in arangosh:
    
  - '%t': current time as timestamp
  - '%p': duration of last command in seconds
  - '%d': name of current database
  - '%e': current endpoint
  - '%E': current endpoint without protocol
  - '%u': current user
    
  The time a command takes can be displayed easily by starting arangosh with `--console.prompt "%p> "`.

* make the ArangoShell refill its collection cache when a yet-unknown collection