@@ -1,6 +1,8 @@
 devel
 -----
 
+* potential fix for issue #3562: Document WITHIN_RECTANGLE not found
+
 * increase default maximum number of V8 contexts to at least 16 if not 
   explicitly configured otherwise. the mode for determining the actual maximum
   value of V8 contexts is unchanged and works as follows:
